--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,37 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
 body {
-
+    margin: 0;
     background: darkgray;
     overflow: hidden;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#verticalButtons {
+    display: flex;
+    flex-direction: column;
+
+}
+
+button {
+    border: none;
+    margin: 2px;
+    padding: 5px 5px 7px 5px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+button:hover {
+    background-color: lightgray;
 }
 
 
-#myCanvas {
+#carCanvas {
     background-color: lightgray;
+
+}
+
+#networkCanvas {
+    background-color: black;
 
 }
